# EAG-V2

./: .gitignore  README.md  main.py  prompt_of_prompts.md  pyproject.toml
Week-1/: INSTALLATION.md  README.md  background.js  content.js  create-icons.js  generate-icons.html  manifest.json  package.json  pdf-setup.md  pdf.min.js  pdf.worker.min.js  popup.html  popup.js  styles.css
Week-1/icons/: README.md
Week-10/: README.md  main.py  simulator.py
Week-10/action/: executor.py
Week-10/agent/: agentSession.py  agent_loop.py  agent_loop2.py  tool_performance.py
Week-10/config/: mcp_server_config.yaml  profiles.yaml
Week-10/decision/: decision.py
Week-10/mcp_servers/: multiMCP.py
Week-10/perception/: perception.py
Week-10/prompts/: decision_prompt.txt
Week-2/: README.md  agents.js  background.js  manifest.json  popup.html  popup.js  roles.json  styles.css
Week-3/: README.md  background.js  manifest.json  popup.html  popup.js  styles.css  test_backend.html
Week-3/backend/: app.py  config.py  models.py  requirements.txt  run.py
Week-4/: README.md  mcp_server.py  talk2mcp.py
Week-5/: README.md  mcp_server.py  requirements.txt  talk2mcp.py
Week-6/: README.md  action.py  decision.py  main.py  memory.py  models.py  perception.py  requirements.txt
Week-7/: README.md  agent.py  collections_manager.py  models.py
Week-8/: README.md  agent.py  mcp_server_documents.py  mcp_server_telegram.py  mcp_server_websearch.py
Week-9/: BUG_FIX.md  README.md  agent.py  mcp_server_check.py  mcp_server_documents.py  mcp_server_math.py  mcp_server_websearch.py
(+34 files in other folders)
